--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -88,8 +88,8 @@
 							<li><div class="cell"><a href="https://digitalcollections.aucegypt.edu/digital/collection/p15795coll33/id/0" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">AIssa</span> = Ahmed Issa, <i>Dict. des Noms des Plantes</i>, Cairo, 1930.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">AJSL</span> = <i>American Journ. of Semit. Languages</i>.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Alex</span> = MSS. &amp;c. in Graeco-Roman Museum, Alexandria.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">Almk 1</span> = H. Almkvist, <i>Kleine Beitr. z. Lexikographie d. vulg. Arabischen</i>, 8th Or. Congr., 1891.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">Almk 2</span> = continuation of above, ed. K. V. Zetterstéen, in <i>Le Monde Oriental</i>, 1925.</div></li>
+							<li><div class="cell"><a href="https://menadoc.bibliothek.uni-halle.de/publicdomain/content/titleinfo/987995" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Almk 1</span> = H. Almkvist, <i>Kleine Beitr. z. Lexikographie d. vulg. Arabischen</i>, 8th Or. Congr., 1891.</div></li>
+							<li><div class="cell"><a href="https://books.google.com/books/about/Le_Monde_oriental.html?id=r9IbAAAAMAAJ" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Almk 2</span> = continuation of above, ed. K. V. Zetterstéen, in <i>Le Monde Oriental</i>, 1925.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">ALR</span> = Accademia dei Lincei, <i>Rendiconti</i>.</div></li>
 							<li class="bible"><span class="abbr">Am</span> = Amos.</li>
 							<li><div class="cell"><a href="https://archive.org/details/lesactesdesmarty01hyve" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">AM</span> = H. Hyvernat, <i>Actes des Martyrs</i>, 1886.</div></li>
@@ -99,7 +99,7 @@
 							<li class="non-source"><span class="abbr">Ar</span>, <span class="abbr">ar</span> = Arabic.</li>
 							<li class="non-source"><span class="abbr">art</span> = article.</li>
 							<li><div class="cell"><a href="https://books.google.com/books?id=D10UAQAAIAAJ" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Asmus</span> = H. Asmus, <i>Über Fragmente im mitteläg. Dialekt</i> (Dissert.), 1904, acc. to pp.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">AZ</span> = <i>Zeitschr. f. Aegyptische Sprache</i>, acc. to vols.</div></li>
+							<li><div class="cell">12<a href="https://archive.org/details/zeitschriftfr12brug" class="source" target="_blank"></a><br>16<a href="https://archive.org/details/zeitschriftfr16brug" class="source" target="_blank"></a><br>21<a href="https://archive.org/details/zeitschriftfr21brug" class="source" target="_blank"></a><a href="https://books.google.com/books/about/Zeitschrift_f%C3%BCr_%C3%A4gyptische_Sprache_und.html?id=dWf_MWStDZgC" class="source" target="_blank"></a><br>23<a href="https://archive.org/details/zeitschriftfr23brug" class="source" target="_blank"></a><br>24<a href="https://archive.org/details/zeitschriftfr24brug" class="source" target="_blank"></a><br>33<a href="https://archive.org/details/zeitschriftfr33brug" class="source" target="_blank"></a><br>51<a href="https://archive.org/details/zeitschriftfr51brug" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">AZ</span> = <i>Zeitschr. f. Aegyptische Sprache</i>, acc. to vols.</div></li>
 							<li class="non-source"><i class="dialect">B</i> = Bohairic dialect.</li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Bal</span> = papyri from Balaizah, in Bodleian, in so far as not numbered in series “Bodl. Copt. (P)”.</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/sacrorumbiblior00borggoog" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Balestri</span> = <i>Sacr. Bibl. Fragm.</i>, III, ed. I. Balestri, 1904.</div></li>
@@ -112,7 +112,7 @@
 							<li><div class="cell"><a href="https://catalog.hathitrust.org/Record/000675895" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Bess</span> = <i>Bessarione</i> (periodical), acc. to vols.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">BG</span> = Berlin Gnostic Papyrus 8502 (<i>cf.</i> Preuss. Akad., <i>Sitz.</i> xxxvi, 839), from photographs.</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/coptichomiliesin00budgrich/page/56/mode/2up" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">BHom</span> = Budge, <i>Coptic Homilies</i>, 1910.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">BIF</span> = <i>Bulletin de l'Instit. français…au Caire</i>.</div></li>
+							<li><div class="cell">14 (p. 97–190) <a href="https://www.ifao.egnet.net/bifao/14/7/" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">BIF</span> = <i>Bulletin de l'Instit. français…au Caire</i>.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">BKU</span> = Berliner <i>Kopt. Urkunden</i>, acc. to vol., no. and, in long texts, lines.</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/MN41447ucmf_1" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Blake</span> = Epiphanius, <i>De XII Gemmis</i>, ed. R. P. Blake, Coptic fragts. by H. De Vis, 1934 (in Lake's <i>Studies &amp; Documents</i>).</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/catalogueofcopti00brituoft" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">BM</span> = British Museum, <i>Catalogue of Coptic MSS.</i>, 1905, acc. to numbers.</div></li>
@@ -148,13 +148,13 @@
 							<li class="bible"><span class="abbr">Chr.</span> = Chronicles.</li>
 							<li class="non-source"><span class="abbr">cit</span> = cited, quoted in following place.</li>
 							<li><div class="cell"><a href="https://archive.org/details/bub_gb_5HkRAAAAYAAJ" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Cl</span> = C. Schmidt, <i>Der I. Clemensbrief.</i> 1908 } acc. to chh.</div></li>
-							<li><div class="cell"><a href="https://archive.org/details/bruchstckedese00clemuoft/bruchstckedese00clemuoft" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">—</span> = F. Röach, <i>Bruchstücke des I. Clem.</i> 1910 } of Greek text.></div></li>
+							<li><div class="cell"><a href="https://archive.org/details/bruchstckedese00clemuoft/bruchstckedese00clemuoft" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">—</span> = F. Röach, <i>Bruchstücke des I. Clem.</i> 1910 } of Greek text.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">ClPr</span> = Woide's MSS. belonging to the Clarendon Press (Crum's copies &amp; photographs).</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/copticmanuscript00crumuoft" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">CMSS</span> = Crum, <i>Coptic MSS. from Fayyûm</i>, 1893, acc. to pp.</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/copticostracafr00fundgoog" class="source" target="_blank"></a></div><div class="cell"> <span class="abbr">CO</span> = Crum, <i>Coptic Ostraca</i>, 1902.</div></li>
 							<li class="bible"><span class="abbr">Col</span> = Epistle to Colossians.</li>
 							<li class="bible"><span class="abbr">Cor</span> = Epistles to Corinthians.</li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">CR</span> = <i>Comptes Rendus de l'Acad. des Inscr.</i>, Paris, acc. to year &amp; page.</div></li>
+							<li><div class="cell">'87 (pp. 374–379) <a href="https://www.persee.fr/doc/crai_0065-0536_1887_num_31_3_69369" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">CR</span> = <i>Comptes Rendus de l'Acad. des Inscr.</i>, Paris, acc. to year &amp; page.</div></li>
 							<li class="bible"><span class="abbr">Dan</span> = Daniel.</li>
 							<li class="non-source"><span class="abbr">dem</span> = demotic.</li>
 							<li class="bible"><span class="abbr">Deu</span> = Deuteronomy.</li>
