--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -370,7 +370,7 @@
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Ricci</span> = MSS. &amp; copies belonging to Seymour de Ricci (Crum's copies).</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">RNC</span> = F. Rossi, <i>Un Nuovo Cod. Copto</i> (Memorie Accad. Lincei, 1893), acc. to pp. of separate publication.</div></li>
 							<li class="bible"><span class="abbr">Ro</span> = Epistle to Romans.</li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">ROC</span> = <i>Revue de l'Orient Chrétien</i>, acc. to vol.</div></li>
+							<li><div class="cell">1913 <a href="http://catholicapedia.net/Documents/Revue-de-l.Orient-chretien/18-1913_revue-de-l.orient-ch_paris.pdf" class="source" target="_blank"><br>17 <a href="http://catholicapedia.net/Documents/Revue-de-l.Orient-chretien/17-1912_revue-de-l.orient-ch_paris.pdf" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">ROC</span> = <i>Revue de l'Orient Chrétien</i>, acc. to vol.</div></li>
 							<li><div class="cell"><a href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015080323788" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Rösch</span> = F. Rösch, <i>Vorbemerkungen zu e. Gramm. d. achmîmischen Mundart</i>, 1909, acc. to pp.</div></li>
 							<li class="bible"><span class="abbr">Ru</span> = Ruth.</li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Ryl</span> = <i>Catal. of Coptic MSS. in John Rylands Library</i>, 1909, acc. to numbers; RylSuppl = MSS. acquired since publication of catalogue (<i>cf</i> Ryl <i>Bull.</i> 5).</div></li>
@@ -420,7 +420,7 @@
 							<li><div class="cell"><a href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015084467946&seq=509" class="source" target="_blank"></a> ?</div><div class="cell"><span class="abbr">TurO</span> = do., <i>Koptskia Ostraka…Golenishtshef</i> (= Bull. Acad. Imp. x, no. 5, 1899), acc. to numbers.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Turin ostr</span> = ostraca in Museo Archeol., Turin (Crum's copies).</div></li>
 							<li class="non-source"><span class="abbr"><i>V</i></span> = <i>vide</i>.</li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">Va</span> = MSS. in Vatican Library, acc. to photographs or to copies by H. De Vis.</div></li>
+							<li><div class="cell">57 <a href="https://digi.vatlib.it/view/MSS_Vat.copt.57" class="source" target="_blank"></a><br>58 <a href="https://digi.vatlib.it/view/MSS_Vat.copt.58" class="source" target="_blank"></a><br>59 <a href="https://digi.vatlib.it/view/MSS_Vat.copt.59" class="source" target="_blank"></a><br>61 <a href="https://digi.vatlib.it/view/MSS_Vat.copt.61" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Va</span> = MSS. in Vatican Library, acc. to photographs or to copies by H. De Vis.</div></li>
 							<li class="non-source"><span class="abbr">var</span> = variant, in same dialect.</li>
 							<li class="non-source"><span class="abbr">vb</span> = verb.</li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Vi</span> = Vienna, MSS. &amp; ostraca in the Staats (<i>olim</i> Hof) bibliothek.</div></li>
