update crum, main, create silvanus

--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
 				<h3>Saints' Lives</h3>
 				<li><a href="./coptic/lives/hilaria">Life of St. Hilaria</a></li>
 				<li><a href="./coptic/lives/seven_sleepers">Seven Sleepers of Ephesus</a></li>
+				<li><a href="./coptic/lives/silvanus">Teachings of Silvanus</a></li>
 			</ul>
 			<ul id="tools">
 				<h3>Tools</h3>
 				<li><a href="./coptic/dictionary_editor/index.html">Dictionary Entry Template</a></li>
 				<li><a href="./egyptian">Visual Editor for Hieroglyphic Font</a></li>
+			</ul>
+			<ul id="volunteer">
+				<h3>Contributions to Coptic SCRIPTORIUM</h3>
+				<li><a href="https://data.copticscriptorium.org/search?text=&annotation=Randy+Komforty">Annotations</a></li>
+				<li><a href="https://data.copticscriptorium.org/search?text=&translation=Randy+Komforty">Translations</a></li>
 			</ul>
 		</div>
 		<p>Contact:</p>
