--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -259,7 +259,7 @@
 							<li><div class="cell"><a href="https://www.scribd.com/doc/203860772/Lemm-O-Iberica-1906" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">LIb</span> = Lemm, <i>Iberica</i>.</div></li>
 							<li class="non-source"><span class="abbr">lit</span> = literally.</li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">LMär</span> = Lemm, <i>Bruchstücke Kopt. Märtyrerakten</i>.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">LMis</span> = Lemm, <i>Koptische Miscellen</i>, acc. to continuous pagination.</div></li>
+							<li><div class="cell">81 <a href="https://www.mathnet.ru/links/b4f6a28733ed805b819033359e6d6ddf/im7027.pdf" class="source" target="_blank"></a><br>130 <a href="https://www.mathnet.ru/links/4c1897a7f175553e1277c806ba384dae/im6658.pdf" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">LMis</span> = Lemm, <i>Koptische Miscellen</i>, acc. to continuous pagination.</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/AramaeischePflanzennamen" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Löw</span> = Im. Löw, <i>Aramäische Pflanzennamen</i>, 1881, acc. to pp.</div></li>
 							<li><div class="cell"><a href="https://books.google.com/books?id=VbwYAAAAIAAJ&newbks" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">LöwF</span> = <i>Flora der Juden</i>, 1926 ff.</div></li>
 							<li class="bible"><span class="abbr">Lu</span> = Luke.</li>
@@ -278,9 +278,9 @@
 							<li class="bible"><span class="abbr">Mic</span> = Micah.</li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Mich 550</span>, a series of vellum leaves at Michigan University, independently numbered thus (but <i>cf</i> note in Preface).</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">MIE</span> = <i>Mémoires de l'Instit. Égyptien</i>, Cairo.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">MIF</span> = <i>Mémoires…de l'Instit. franç. d'Archéol. orient. au Caire</i>.</div></li>
+							<li><div class="cell">9 <a href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015084562092" class="source" target="_blank"></a><a href="https://books.google.com/books?vid=UOM:39015084562092" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">MIF</span> = <i>Mémoires…de l'Instit. franç. d'Archéol. orient. au Caire</i>.</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/aegyptiorumcodic00ming" class="source" target="_blank"></a></div><div class="cell"> <span class="abbr">Ming</span> = J. A. Mingarelli, <i>Aegyptiorum Codd. Reliquiae</i>, 1785.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">Miss</span> = <i>Mémoires…de la Mission archéol. franç. au Caire</i>.</div></li>
+							<li><div class="cell">1 <a href="https://omekas.mom.fr/s/digimom/item/142" class="source" target="_blank"></a><br>4 <a href="https://archive.org/details/mmoirespub04inst" class="source" target="_blank"></a><br>8 <a href="https://archive.org/details/MMAF8.2" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Miss</span> = <i>Mémoires…de la Mission archéol. franç. au Caire</i>.</div></li>
 							<li class="bible"><span class="abbr">Mk</span> = Mark.</li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">MMA</span> = MSS. &amp; ostraca in the Metropolitan Museum of Art, New York.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Montp</span> = Bohairic <i>Scala</i> in library of Faculté de Médecine, Montpellier (H. Munier's copy).</div></li>
@@ -341,7 +341,7 @@
 							<li><div class="cell"></div><div class="cell"><span class="abbr">PMich</span> = Papyri at Michigan University, with year of acquisition where no. not ascertained.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">PMon</span> = <i>Byzantinische Papyri…zu München</i>, ed. Heisenberg &amp; Wenger, 1914, acc. to pp.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">PNolot</span> = rest of papyrus ed. V. Loret, <i>Rec</i> 16 103 (Kuentz's copy).</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">PO</span> = <i>Patrologia Orientalis</i>.</div></li>
+							<li><div class="cell">16 <a href="https://archive.org/details/patrologiaorient16pariuoft" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">PO</span> = <i>Patrologia Orientalis</i>.</div></li>
 							<li class="non-source"><span class="abbr">poss</span> = possessive pronoun.</li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">POxy</span> = <i>Oxyrhynchus Papyri</i>, ed. Grenfell &amp; Hunt.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">PRain</span> = Papyri in the Rainer Collection (Staatsbibl.), Vienna (Till's copies), more often as Vi.</div></li>
@@ -362,18 +362,18 @@
 							<li><div class="cell"><a href="https://archive.org/details/umn.319510016716448" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">RAC</span> = E. Revillout, <i>Actes et Contrats…de Boulaq et du Louvre</i>, 1876.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">RAl</span> = F. Rossi, <i>Alcuni MSS. Copti…di Torino</i> (= Memorie…Torino, ser. ii, tom. xliii), acc. to pp. of separate publication.</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/in.ernet.dli.2015.291952" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">RChamp</span> = <i>Recueil d'Études…J. F. Champollion</i>, 1922.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">RE</span> = <i>Revue Égyptologique</i>.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">Rec</span> = <i>Recueil de Travaux &amp;c.</i></div></li>
+							<li><div class="cell">9? <a href="https://archive.org/details/revuegyptologi09pari" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">RE</span> = <i>Revue Égyptologique</i>.</div></li>
+							<li><div class="cell">39 <a href="https://archive.org/details/recueildetravaux39masp" class="source" target="_blank"></a> <a href="https://digi.ub.uni-heidelberg.de/diglit/rectrav1921/0099" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Rec</span> = <i>Recueil de Travaux &amp;c.</i></div></li>
 							<li class="non-source"><span class="abbr">refl</span> = reflexive use.</li>
 							<li class="non-source"><span class="abbr">rel</span> = relative.</li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Rendiconti</span>, <i>v</i> ALR.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Ricci</span> = MSS. &amp; copies belonging to Seymour de Ricci (Crum's copies).</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">RNC</span> = F. Rossi, <i>Un Nuovo Cod. Copto</i> (Memorie Accad. Lincei, 1893), acc. to pp. of separate publication.</div></li>
 							<li class="bible"><span class="abbr">Ro</span> = Epistle to Romans.</li>
-							<li><div class="cell">1913 <a href="http://catholicapedia.net/Documents/Revue-de-l.Orient-chretien/18-1913_revue-de-l.orient-ch_paris.pdf" class="source" target="_blank"><br>17 <a href="http://catholicapedia.net/Documents/Revue-de-l.Orient-chretien/17-1912_revue-de-l.orient-ch_paris.pdf" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">ROC</span> = <i>Revue de l'Orient Chrétien</i>, acc. to vol.</div></li>
+							<li><div class="cell"><a href="http://catholicapedia.net/Documents/Revue-de-l.Orient-chretien/18-1913_revue-de-l.orient-ch_paris.pdf" class="source" target="_blank">1913</a><br><a href="http://catholicapedia.net/Documents/Revue-de-l.Orient-chretien/17-1912_revue-de-l.orient-ch_paris.pdf" class="source" target="_blank">17</a></div><div class="cell"><span class="abbr">ROC</span> = <i>Revue de l'Orient Chrétien</i>, acc. to vol.</div></li>
 							<li><div class="cell"><a href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015080323788" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Rösch</span> = F. Rösch, <i>Vorbemerkungen zu e. Gramm. d. achmîmischen Mundart</i>, 1909, acc. to pp.</div></li>
 							<li class="bible"><span class="abbr">Ru</span> = Ruth.</li>
-							<li><div class="cell"><a href="" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Ryl</span> = <i>Catal. of Coptic MSS. in John Rylands Library</i>, 1909, acc. to numbers; RylSuppl = MSS. acquired since publication of catalogue (<i>cf</i> Ryl <i>Bull.</i> 5).</div></li>
+							<li><div class="cell"><a href="https://archive.org/details/cu31924099175329" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Ryl</span> = <i>Catal. of Coptic MSS. in John Rylands Library</i>, 1909, acc. to numbers; RylSuppl = MSS. acquired since publication of catalogue (<i>cf</i> Ryl <i>Bull.</i> 5).</div></li>
 							<li class="non-source"><i class="dialect">S</i> = Saʿîdic dialect; <i class="dialect">S<sup>a</sup></i> Saʿîdic with Achmîmic tendency (mostly Theban), <i class="dialect">S<sup>f</sup></i> with Fayyûmic tendency.</li>
 							<li class="bible"><span class="abbr">Sa</span> = Wisdom of Solomon.</li>
 							<li><div class="cell"><a href="https://digitale-sammlungen.ulb.uni-bonn.de/content/titleinfo/3198124" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Salîb</span> = <i>Kitâb aṣ-Ṣalîb</i>, Cairo, 1921.</div></li>
@@ -411,7 +411,7 @@
 							<li><div class="cell"><a href="https://books.google.com/books/about/Das_Triadon.html?id=zitXAAAAMAAJ" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Tri</span> = Lemm, <i>Das Triadon</i>, 1903, acc. to stanzas.</div></li>
 							<li><div class="cell"><a href="https://digitale-sammlungen.ulb.uni-bonn.de/content/titleinfo/232309" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">TRit</span> = Tuki, <i>Rituale</i>, 1763.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">TSBA</span> = Transactions of the Soc. of Bibl. Archaeology.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">TstAb</span> = I. Guidi, <i>Testo copto del Testam. di Abramo &amp;c.</i> (= ALR, 1900).</div></li>
+							<li><div class="cell"><a href="https://babel.hathitrust.org/cgi/pt?id=njp.32101064179623&seq=163" class="source" target="_blank"></a> <a href="https://books.google.com/books?vid=PRNC:32101064179623" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">TstAb</span> = I. Guidi, <i>Testo copto del Testam. di Abramo &amp;c.</i> (= ALR, 1900).</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/cu31924029634262" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">TT</span> = Crum, <i>Theolog. Texts from Coptic Papyri</i>, 1913.</div></li>
 							<li><div class="cell"><a href="https://digitale-sammlungen.ulb.uni-bonn.de/content/titleinfo/230285" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">TThe</span> = Tuki, <i>Theotokia</i>, 1764.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">TU</span> = Gebhardt, Harnack &amp; C. Schmidt, <i>Texte u. Untersuchungen</i> (Bd. 43 <i>Gespräche Jesu).</i></div></li>
