--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -330,7 +330,7 @@
 							<li><div class="cell"><a href="https://archive.org/details/lexiconlinguaeco00peyr" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Pey</span> = A. Peyron, <i>Lexicon Linguae Copticae</i>, 1835.</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/patrologiaecursu93mignuoft" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">PG</span> = Migne's <i>Patrologia</i>, Series Graeca.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">PGen</span> = magical papyrus in University Library, Geneva (photograph).</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">PGM</span> = <i>Papyri Graecae Magicae</i>, ed. K. Preisendanz I, II, 1928, 1931.</div></li>
+							<li><div class="cell">I <a href="https://archive.org/details/papyrigraecaemag0001unse_x4f6" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">PGM</span> = <i>Papyri Graecae Magicae</i>, ed. K. Preisendanz I, II, 1928, 1931.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">PGol</span> = Papyri formerly in W. Golenischeff's collection, from photographs sent by O. von Lemm.</div></li>
 							<li class="bible"><span class="abbr">Phil</span> = Epistle to Philippians.</li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">PJkôw</span> = Papyri (6th c.) thence, Cairo Mus. (Lacau's copies).</div></li>
