--- a/coptic/dictionary_editor/index.html
+++ b/coptic/dictionary_editor/index.html
@@ -21,7 +21,9 @@
 				</ul>
 			</div>
 			<div id="editor_text" contenteditable="true" spellcheck="false" rows="5" placeholder="Type text here…">#[ⲁⲃⲁϭⲏⲉⲓⲛ]#@ (PS)@, [ϩⲁⲃ-]@ (Ap 4)@, [ⲁⲃⲓϭⲏⲉⲓⲛ], [ⲁⲃⲁⲕⲏⲓⲛⲉ], [ⲁϥⲉϭⲉⲉⲛⲉ]@ (Mor 31 211)@, [ⲁⲃⲓϭⲉⲉⲓⲛⲉ] [S], [ⲁⲃⲁϫⲏⲓⲛⲓ], [ⲁⲃⲁϫⲓⲛⲓ], [ⲃⲁϫⲓⲛⲓ], [ⲃⲁϫⲏⲓⲛⲓ], [ⲃⲁϫⲏⲛⲓ] [B], [ⲁⲃⲓϭⲉⲛⲓ] [F] (many varr [S][B]), sg as pl@ Mor 47 178, C 43 128@, nn m f@ (C 86 356, 359)@, [የሰው፡ልጅ፡ሁሉ፡ሲወለድ፡ነጻና፡በክብርና፡በመብትም፡እኩልነት፡ያለው፡ነው።፡የተፈጥሮ፡ማስተዋልና] _glass_, _cf_ Pers [آبگينه] (Tattam)@: Job 28 17 [B], Ap 21 18 [S][B], [ὕαλος], Ap 4 6 [S][B] [ὑάλινος], P 44 61 [S] [زجاج]. Objects of glass: [εἶδος] MG 25 370 [B], PMéd 219, 230 [S]; [σκεῦος] Mor 19 91 [S], _ib_ 48 56 [S] = C 43 128 [B], MG 25 255 [B] (chalices in poor churches, _cf_ PO 5 62, Ryl _Bulletin_ 11 293); [ποτήριον] BM 1008 [S]; [ⲙⲟⲕⲓ] MG 25 191 [B]; [ⲡⲟⲛⲕϥ] Mor 31 211 [S]; [ϭⲁⲗⲗⲁϩⲧ] Kropp F; [ϩⲁⲃⲥ] cover, lid BKU 1 26 18 [F]; [ⲕⲁⲩⲧⲏⲣ], [ⲕⲁⲧⲏⲗ] [قدير] Bodl(P) a 1 _f_, a 3 22 (_cf_ a 2 60); sapphire-hued from Alexandria Mor 47 178 [S], pure ([καθαρός]) violet-hued ([ⲓⲱⲓⲁⲥ] ? [ἰόεις]) Z 611 [S], white Syrian [ⲛⲁϣ\\(ϣ\\)ⲉⲙⲓ] ([الشامى]) [ⲛⲁⲗⲁⲩ] Bodl(P) a 2 38@.\n[ⲥⲁⲛⲁⲃⲁϭⲏⲉⲓⲛ], [-ϫⲏⲓⲛⲓ] [S][B] nn m, _glass-blower_ or _seller_@: C 41 67, K 128 [B] [زجّاج], Mor 50 45 [S], CO 162 [S]. [ⲃⲁϫ](var [ⲅ])[ⲏⲓⲛⲓⲧⲏⲥ] [زجّاج] K 111 [B].\nIn place-name: PSBA 29 301 Monastery of [ⲛⲓⲁⲛ] (? [ⲛⲓⲥⲁⲛ]) [ⲁⲃⲁϫⲱⲛⲓ] [دير الزجاج], W. of Alexandria@.</div>
-			<div id="rendered_view"></div>
+			<div id="rendered_view">
+				<p></p>
+			</div>
 		</div>
 		<script type="module" src="./scripts/scripts.js"></script>
 	</body>
