--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 		<h1>Randy Komforty</h1>
 		<h2>Coptic Research</h2>
 		<div id="container">
+			<ul id="dictionaries">
+				<h3>Dictionaries</h3>
+				<li><a href="./coptic/crum">Crum, <i>A Coptic Dictionary</i></a></li>
+				<li><a href="./coptic/kasser">Kasser, <i>Compléments au Dictionnaire Copte de Crum</i></a></li>
+				<li><a href="./coptic/vycichl">Vycichl, <i>Dictionnaire Étymologique de la Langue Copte</i></a></li>
+				<li><a href="./coptic/westendorf">Westendorf, <i>Koptisches Handwörterbuch</i></a></li>
+				<li><a href="./coptic/cerny">Černý, <i>Coptic Etymological Dictionary</i></a></li>
+			</ul>
 			<ul id="grammars">
 				<h3>Grammars</h3>
-				<li><a href="./coptic/crum/index.html">Crum, <i>A Coptic Dictionary</i></a></li>
-				<li><a href="./coptic/vycichl/index.html">Vycichl, <i>Dictionnaire Étymologique de la Langue Copte</i></a></li>
-				<li><a href="./coptic/mallon/index.html">Mallon, <i>Grammaire Copte</i></a></li>
-				<li><a href="./coptic/westendorf/index.html">Westendorf, <i>Koptisches Handwörterbuch</i></a></li>
-				<li><a href="./coptic/lambdin/index.html">Lambdin, <i>Introduction to Sahidic Coptic</i></a></li>
+				<li><a href="./coptic/lambdin">Lambdin, <i>Introduction to Sahidic Coptic</i></a></li>
+				<li><a href="./coptic/mallon">Mallon, <i>Grammaire Copte</i></a></li>
 			</ul>
 			<ul id="lives">
 				<h3>Saints' Lives</h3>
