--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>Randy Komforty</h1>
-		<h2>Coptic Research</h2>
+		<!--<h2>Coptic Research</h2>-->
 		<div id="container">
 			<ul id="dictionaries">
 				<h3>Dictionaries</h3>
