--- a/coptic/lambdin_bohairic/index.html
+++ b/coptic/lambdin_bohairic/index.html
@@ -5739,12 +5739,16 @@
 						<td>out, away</td>
 					</tr>
 					<tr>
-						<td class="coptic">ⲉϩⲟⲩⲛ</td>
+						<td class="coptic">ⲉϧⲟⲩⲛ</td>
 						<td>in</td>
 					</tr>
 					<tr>
-						<td class="coptic">ⲉϩⲣⲁⲓ</td>
-						<td>up, down</td>
+						<td class="coptic">ⲉϩⲣⲏⲓ</td>
+						<td>up</td>
+					</tr>
+					<tr>
+						<td class="coptic">ⲉϧⲣⲏⲓ</td>
+						<td>down</td>
 					</tr>
 					<tr>
 						<td class="coptic">ⲉⲡⲉⲥⲏⲧ</td>
